--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -4,6 +4,20 @@
   "information" : "عن الشركة",
   "Categories" : "الفئــات",
 
+  "شغل صفحة on Boarding  ********************" : "******************* شغل صفحة  on Boarding ",
+  "SKIP" : "تخطـي",
+  "solutions," : "الحلول",
+  "We give you " : "نحن نعطيك ",
+  "you get the results." : "انت تحصل علي النتائج.",
+  "strategy" : "استراتيجية",
+  "The right digital marketing " : "يلزمك للتسويق الرقمي ",
+  "grow & increase leads." : "تزيد العملاء المحتملين.",
+  "free" : "مجانــا",
+  "Communicate and Consulting " : "تواصل وتشاور ",
+  "with Brilliant Company." : "مع شركة Brilliant.",
+  "Get Started" : "ابـدأ الان",
+
+
   "شغل صفحة Home  ********************" : "******************* شغل صفحة  Home ",
   "Discover the special packages now, especially for you" : "أكتشف الباقات المميزة الآن, خصيصا من اجلك.",
   "Gain Business awareness, grow and increase leads with the right digital marketing strategy" : "اكتساب زيادة العملاء المستهدفين مع استراتيجية التسويق الرقمي المناسبة.",
@@ -29,11 +43,13 @@
   "شغل صفحة information  ********************" : "******************* شغل صفحة  information ",
   "\uD83D\uDCCD Tanta, Gharbia, EGY" : "\uD83D\uDCCD طـنـطـا, الغربـيـة, مـصـر",
   "About us .." : "عـن الشركـة ..",
-  "   customize and convenient POS system that can be adoptable every industry.The best comprehensive company in Egypt, started as a company specialized in the field of computing and point of sale solutions, we jumped into the professional POS business and has grown since into point of sale, Hardware sales and POS solution supplier." : "  نظام نقاط البيع المخصص والمريح الذي يمكن اعتماده في كل صناعة. بدأت أفضل شركة شاملة في مصر ، كشركة متخصصة في مجال الحوسبة وحلول نقاط البيع ، قفزنا إلى أعمال نقاط البيع الاحترافية ونمت منذ ذلك الحين حتى نقطة البيع ومبيعات الأجهزة ومورد حلول نقاط البيع.",
-  "Our Mission .." : "مـهـمـتـنــا ..",
-  "   Our Mission is to achieve the reputation of a quality, high standard & reliable solution & service Provider company in the ICT industry." : "   مهمتنا هي تحقيق سمعة شركة تقدم حلول وخدمات عالية الجودة ومعايير عالية وموثوق بها في صناعة تكنولوجيا المعلومات والاتصالات.",
-  "Our Vision .." : "رؤيتـنــا",
-  "   Our Vision is to achieve 100% customer satisfaction by delivering quality products and service at an affordable cost. we are aiming to become an entity in technology based corporate solutions, capable of demanding unconditional response from the targeted niche." : "   تتمثل رؤيتنا في تحقيق رضا العملاء بنسبة 100٪ من خلال تقديم منتجات وخدمات عالية الجودة بتكلفة معقولة. نحن نهدف إلى أن نصبح كيانًا في حلول الشركات القائمة على التكنولوجيا ، قادرة على المطالبة باستجابة غير مشروطة من المكانة المستهدفة.",
+  "   customize and convenient POS system that can be adoptable every industry.The best comprehensive company in Egypt, started as a company specialized in the field of computing and point of sale solutions, we jumped into the professional POS business and has grown since into point of sale, Hardware sales and POS solution supplier." : "نحن نعمـــل مــع عملائنــــــا لمســاعدتهم على التخطيط وبناء البنيــــــــة التحتيــــــــة لتكنولوجيـــــا المعلومـــــــــات وأنظمة المراقبة وإدارة العملاء والتسويق الالكتروني.",
+  "Our Mission .." : "رسالتنــــا ..",
+  "   Our Mission is to achieve the reputation of a quality, high standard & reliable solution & service Provider company in the ICT industry." : "مســـــاعده الأنشطــــــــــة التجــــــارية علي العلــــو والارتقـــــاء عــن طريـــــق استخـــــدام خططنـــــا التسويقيـــة الفعالـــــــة والوصول لدرجه عالية من الرضا من جانب شركائنا الاعزاء.",
+  "Our Vision .." : "رؤيتـنــا ..",
+  "   Our Vision is to achieve 100% customer satisfaction by delivering quality products and service at an affordable cost. we are aiming to become an entity in technology based corporate solutions, capable of demanding unconditional response from the targeted niche." : "نعتقد ايضا أن تكنولوجيــــا المعلــومــــات اليــــــوم يجـــــب أن تكون أهم الأصول في أي عمـــل تجـــــاري ، بسبـــــــــب التحسينــــات الهــــائلـــة وزيادة الإنتاجيـــــــة التي يمكـــــــــن أن توفرهــــــــا تكنولوجيــــــــا المعلومــــــــــات لأي عمــــــــــل.",
+  "Our Values .." : "طريقتنــــا ..",
+  "You will find us attentive, proactive and highly engaged with our customers. Since digital is a fast-moving technology, we move with our customers into building long-term sustainable relation-ships." : "عملائنا سيجدوننــــا متيقظيـــن وعلـــي درجه عالية من التواصل والتفاعل معهم ولان (العمليات الرقمية) في مغزاها الرئيسي تتمحـــــور حـــــول تكنولوجيـــا سريعة ودقيقـــه فنحن في شركتنا Brilliant نســــــاير هذا الاتجاه ونعمـــــــل علي خلـــــــــق علاقات تتسم بالاستمرارية مع عملائنا.",
   "Follow us" : "تابعـــنـا",
   "Share with Brilliant" : "تشارك مع شركتنا",
   "Request Service" : " أطلـب خدمـتـك",
@@ -90,6 +106,7 @@
   "Some devices can be installed through which we can control the whole house." : "هتقدر تفتح وتقفل الأنوارعن بعد , ونتحكم في شده الاضاءه وده هيوفرلك في استهلاك الطاقة وبكده بيحققلك التوفير والتحكم.",
   "You can make a script for your daily routine and record it on an application." : "هتتحكم في فتح وقفل الستائر وتقدر تنظم سيناريو بفتح وقفل الستائر في وقت معين.\nوكمان تتحكم في درجة حرارة المكان وتنظم درجة حرارة معينة وتبرمجها في وقت محدد.",
   "Watch Video" : "شاهـد الفيديو",
+  "Let’s Talk about your Smart Home Scenario." : "لنتحدث عن استراتيجية المنزل الذكي الخاصة بك...",
   "Request" : "أطلبنا",
 
   "شغل صفحة IT  ********************" : "******************* شغل صفحة  IT ",
@@ -110,8 +127,10 @@
 
 
   "شغل صفحة call Center  ********************" : "******************* شغل صفحة  call Center ",
+
   "The unified number communication system Now you can do a comprehensive development of the communication system In your organization, whatever its size" : "الكول سنتر خدمة الاتصال للرقم الموحد بيقدملك ربط منظومة الاتصال الكاملة في المؤسسه ويمكنك من التطوير الشامل لنظام الاتصالات بها مهما كان حجمها",
-  "Now you can do a comprehensive development of the communication system in your organization." : "الكول سنتر بيقدر يوفرلك العديد من المميزات اللي تهمك وكمان بيتعامل مع عدد كبير من المكالمات في نفس الوقت.\u200F ",
+  "The call center can provide you with many features that interest you, and it also deals with a large number of calls at the same time." : "الكول سنتر بيقدر يوفرلك العديد من المميزات اللي تهمك وكمان بيتعامل مع عدد كبير من المكالمات في نفس الوقت.",
+  "Now you can do a comprehensive development of the communication system in your organization, because Its not just a Contact Center. Its a Context Center." : "الآن يمكنك القيام بتطوير شامل لنظام الاتصالات في مؤسستك, وذلك لإنه ليس مجرد مركز اتصال. إنه مركز السيــاق.",
   "Contacting" : "الاتصال",
   "Send and receive calls from a computer or through an application on the phone from a unified number" : "إرسال واستقبال المكالمات من جهاز كمبيوتر أو من خلال تطبيق على الهاتف من رقم موحد.",
   "Connecting" : "التواصل",
@@ -128,9 +147,11 @@
   "Let’s Talk about your Call Center Strategy" : "لنتحدث عن استراتيجية الكول سنتر الخاصة بك...",
 
   "شغل صفحة marketing  ********************" : "******************* شغل صفحة  marketing ",
+
   "Marketing services" : "خدمـات التسـويق",
-  "Strategy" : "اسـتراتيجيتنـا",
-  "Gain business awareness, grow and increase leads with the right digital marketing strategy" : "اكتسـب زيـادة فـي العمـلاء المحتملين \n مـع استـراتيجية التسويـق الرقمـي الصحيحـة.",
+  "Marketing Strategy" : "استراتيجية التسويق الرقمى",
+  "Marketing products or services through social networking sites Easier, faster, cheaper, more effective and flexible than traditional marketing methods" : "تسويق المنتجات او الخدمات من خلال مواقع التواصل الاجتماعي, حيث يتميز بكونه أسهل وأسرع وأرخص وأكثر فاعليه ومرونه من طرق التسويق التقليديه.",
+  "Gain business awareness, grow and increase leads with the right digital marketing strategy." : "اكتسـب زيـادة فـي العمـلاء المحتملين \n مـع استـراتيجية التسويـق الرقمـي الصحيحـة.",
   "SOCIAL MEDIA MARKETING" : "منصات التواصل الاجتماعي",
   "Being on social platforms & building an audience interested in your product or service is essential, but the main axis to reach the largest number of customers is by spreading on each platform (Facebook, YouTube, Twitter..etc) with a complete marketing system" : "يعتبر الظهور علي منصات التواصل الاجتماعي من أساسيات التسويق الإلكتروني للحصول على جمهور مهتم بمنتجك أو خدمتك وذلك بالانتشار على كل منصة مثل (Facebook ، YouTube ، Twitter) بنظام تسويق متكامل.",
   "Full Promotion Process" : "عمليات الترويج الاعلانية",
@@ -145,24 +166,24 @@
   "شغل صفحة popular cameras  ********************" : "******************* شغل صفحة  popular cameras ",
 
   "popular security cam info" : "كاميرا فيديو تسجل أنشطة الأشخاص من أجل الكشف عنها عبارة عن جهاز تسجيل فيديو يلتقط لقطات من منزلك وممتلكاتك.",
-  "popular security cam service details" : "  يمكنك مشاهدتها على هاتف ذكي أو جهاز لوحي أو جهاز كمبيوتر من أي مكان باستخدام الإنترنت.\n\n  يتم تنشيط معظم كاميرات مراقبة المنزل بالحركة وستقوم بالتسجيل عند اكتشاف الحركة ، بالإضافة إلى إرسال تنبيه إليك علي هاتفك.",
+  "popular security cam service details" : "يمكنك مشاهدتها على هاتف ذكي أو جهاز لوحي أو جهاز كمبيوتر من أي مكان باستخدام الإنترنت.\n\nيتم تنشيط معظم كاميرات مراقبة المنزل بالحركة وستقوم بالتسجيل عند اكتشاف الحركة ، بالإضافة إلى إرسال تنبيه إليك علي هاتفك.",
 
   "شغل صفحة popular marketing  ********************" : "******************* شغل صفحة  popular marketing ",
 
   "popular marketing info" : "التسويق الرقمي هو بوابتك الذكية لزيادة مبيعاتك ، والوصول إلى عملائك المحتملين وتقدم مؤسستك بأساليب تسويق فعالة واستراتيجيات مدروسة جيدًا.",
-  "popular marketing service details" : " يشمل الترويج للعلامات التجارية للتواصل مع العملاء المحتملين باستخدام الإنترنت وأشكال الاتصال الرقمية الأخرى.\n\n  لا يشمل ذلك البريد الإلكتروني ووسائل التواصل الاجتماعي والإعلانات المستندة إلى الويب فحسب ، بل يشمل أيضا الرسائل النصية ورسائل الوسائط المتعددة كقناة تسويق.",
+  "popular marketing service details" : "يشمل الترويج للعلامات التجارية للتواصل مع العملاء المحتملين باستخدام الإنترنت وأشكال الاتصال الرقمية الأخرى.\n\nلا يشمل ذلك البريد الإلكتروني ووسائل التواصل الاجتماعي والإعلانات المستندة إلى الويب فحسب ، بل يشمل أيضا الرسائل النصية ورسائل الوسائط المتعددة كقناة تسويق.",
 
 
   "شغل صفحة popular smart home  ********************" : "******************* شغل صفحة  popular smart home ",
 
   "popular smart home info" : "المنزل الذكي هو بناء أتمتة للمنزل و ربط مختلف الأجهزة والأنظمة في المنزل معاً بحيث يمكن التحكم فيها جميعا من أي مكان, وإحداث التفاعل المطلوب فيما بينها",
-  "popular smart home service details" : "  الجميع يبحث عن الأمان والراحة والتحكم في كل شيء يمكننااستخدام القطع لعمل شيء مختلف.\n\n  يمكننا جعل الأشياء العادية ذكية ، والقيام بمهامها الخاصة عن بعد.\n\n  يمكن تثبيت بعض الأجهزة التي يمكننا من خلالها التحكم في المنزل بأكمله.\n\n  يمكنك عمل نص لروتينك اليومي وتسجيله على أحد التطبيقات.",
+  "popular smart home service details" : "الجميع يبحث عن الأمان والراحة والتحكم في كل شيء يمكننااستخدام القطع لعمل شيء مختلف.\n\nيمكننا جعل الأشياء العادية ذكية ، والقيام بمهامها الخاصة عن بعد.\n\nيمكن تثبيت بعض الأجهزة التي يمكننا من خلالها التحكم في المنزل بأكمله.\n\nيمكنك عمل نص لروتينك اليومي وتسجيله على أحد التطبيقات.",
 
 
   "شغل صفحة popular call center  ********************" : "******************* شغل صفحة  popular call center ",
 
   "popular call center info" : "الكول سنتر بيقدر يوفرلك العديد من المميزات اللي تهمك وكمان بيتعامل مع عدد كبير من المكالمات في نفس الوقت.",
-  "popular call center service details" : "  إرسال واستقبال المكالمات من جهاز كمبيوتر أو من خلال تطبيق على الهاتف من رقم موحد.\n\n  التواصل مع الموظفين داخل وخارج مكان العمل مجانا.",
+  "popular call center service details" : "  إرسال واستقبال المكالمات من جهاز كمبيوتر أو من خلال تطبيق على الهاتف من رقم موحد.\n\nالتواصل مع الموظفين داخل وخارج مكان العمل مجانا.",
 
 
 
